Hero: Adjusted click speed and click on parent. maybe avoid blurry scale bug?

--- a/app/_scss/ui/_hero.scss
+++ b/app/_scss/ui/_hero.scss
@@ -36,6 +36,7 @@
   justify-content: center;
   flex-wrap: nowrap;
   overflow: hidden;
+  cursor: pointer; //click to explode logo
 }
 
 .hero--hidden {
